# price-tracker

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  EXTRACTION.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: OPUS-HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SEED-package-data-moves-to-link.md  STATE.md  config.json
.planning/phases/01-skeleton-domain-copy/: 01-01-SUMMARY.md  01-01-skeleton-PLAN.md  01-02-SUMMARY.md  01-02-domain-port-PLAN.md  01-03-SUMMARY.md  01-03-migration-PLAN.md  01-04-SUMMARY.md  01-04-tests-PLAN.md  01-05-SUMMARY.md  01-05-docker-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-service-infrastructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-admin-ui-iap-header-trust/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-mcp-server-agent-wiring/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/04.1-package-data-moves-to-the-store-link/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-04-PLAN.md  04.1-04-SUMMARY.md  04.1-05-PLAN.md  04.1-05-SUMMARY.md  04.1-06-PLAN.md  04.1-06-SUMMARY.md  04.1-07-PLAN.md  04.1-07-SUMMARY.md  04.1-08-PLAN.md  04.1-08-SUMMARY.md  04.1-CONTEXT.md  04.1-DISCUSSION-LOG.md  04.1-PATTERNS.md  04.1-RESEARCH.md  04.1-VALIDATION.md  04.1-VERIFICATION.md
.planning/quick/260706-rso-fix-4-pre-phase-5-blockers-1-rename-src-/: 260706-rso-PLAN.md  260706-rso-SUMMARY.md
.planning/quick/260706-t3p-fix-2-issues-flagged-after-quick-task-26/: 260706-t3p-PLAN.md  260706-t3p-SUMMARY.md
.planning/quick/260706-tha-fix-4-stale-entra-oidc-references-in-cla/: 260706-tha-PLAN.md  260706-tha-SUMMARY.md
.planning/quick/260706-tq5-reassess-edge-proxy-plan-edge-01-d-18-ac/: 260706-tq5-PLAN.md  260706-tq5-SUMMARY.md
.planning/quick/260706-w69-backfill-retroactive-gsd-phase-artifacts/: 260706-w69-PLAN.md  260706-w69-SUMMARY.md
.planning/quick/260714-gbn-fix-price-history-view-per-link-series-b/: 260714-gbn-PLAN.md  260714-gbn-SUMMARY.md
.planning/quick/260714-hui-ett-sprakspar-forsvenska-all-anvandarsyn/: 260714-hui-PLAN.md  260714-hui-SUMMARY.md
.planning/quick/260714-iqe-uppdatera-claude-md-efter-fas-04-1-port-/: 260714-iqe-PLAN.md  260714-iqe-SUMMARY.md
.planning/quick/260714-iy1-ateruppratta-ruff-fran-kallrepot-plus-ci/: 260714-iy1-PLAN.md  260714-iy1-SUMMARY.md
.planning/quick/260714-jov-lagsta-kr-enhet-i-produktlistan/: PLAN.md  SUMMARY.md
.planning/quick/260714-x48-flodesanalys-atgarder-llm-berikning-sche/: 260714-x48-PLAN.md  260714-x48-SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_store_label.py  0003_seed_kronans.py  0004_seed_apohem.py  0005_store_schedule.py
docs/: quick-add.md
scripts/: verify_phase2.py
src/api/: admin.py  app.py  auth.py  schemas.py
src/api/templates/: admin.html
src/domain/: __init__.py  models.py  notifier.py  parser.py  pricing.py  quickadd.py  result.py  schedule.py  scheduler.py  service.py  tenant.py
src/domain/extractors/: __init__.py  base.py  jsonld.py  willys_api.py
src/domain/protocols/: __init__.py  email.py  fetcher.py  rate_limiter.py
src/domain/stores/: __init__.py
src/infra/: db.py  email.py  fetcher.py  llm.py  logbuffer.py  providers.py  rate_limiter.py
src/mcp_server/: auth.py  server.py
tests/: __init__.py  conftest.py  test_api.py  test_email.py  test_extractors.py  test_fetcher.py  test_logbuffer.py  test_mcp.py  test_migration.py  test_notifier.py  test_parser.py  test_pricing.py  test_quickadd.py  test_rate_limiter.py  test_schedule.py  test_scheduler.py  test_service.py  test_static_gates.py  test_store_label.py
