[project]
name = "price-tracker"
# The released tag, kept in step with it on purpose: this said 0.1.0 while prod ran v0.3.2.
version = "0.15.0"
description = "Standalone Swedish grocery and pharmacy price tracker (extracted from ai-agent-platform)"
authors = [{ name = "Magnus Ternstrom", email = "magnus.ternstrom@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0,<3.0)",
    "alembic (>=1.13,<2.0)",
    "asyncpg (>=0.29,<0.30)",
    "httpx (>=0.28,<0.29)",
    "pydantic (>=2.7,<3.0)",
    "fastapi (>=0.111,<0.112)",
    "uvicorn[standard] (>=0.30,<0.31)",
    "fastmcp (>=2.0,<3.0)",
]

[tool.poetry]
packages = [
    { include = "domain", from = "src" },
    { include = "infra", from = "src" },
    { include = "api", from = "src" },
    { include = "mcp_server", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
aiosqlite = "^0.22.1"
ruff = "0.14.4"

# Ruff config inherited from the source repo (ai-agent-platform/services/agent),
# which the Phase 1 rewrite of this pyproject.toml accidentally dropped.
# Deviations from the source: target-version py312 (we run 3.12, source ran 3.11)
# and first-party packages are ours. `ruff format` replaces the source's separate
# black (it is black-compatible); mypy is deliberately not carried over yet.
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N"]
# B008: FastAPI's `Depends()`-in-default-argument pattern. Moving the call out of
#       the default argument breaks dependency injection (and thus the auth guard).
# S101: assert is how tests assert.
ignore = ["S101", "S104", "B008", "PLR0912", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["domain", "api", "infra", "mcp_server"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: needs a real Postgres (see tests/conftest.py). Skips cleanly when none is reachable; select with -m integration, exclude with -m 'not integration'.",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
